###### TWE 5.0-1 RELEASED ######
2013-06-13 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: now correctly handling references to XPDL_STRING extended attributes

2013-06-06 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: a bit of code refactoring

2013-06-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Introduced XPDL Package->RedefinableHeader->Version as system variable 

2013-05-30 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported new error handler which can also create new process and write log to file system
   # Shark mode: error handler EA change: SMTP_ERROR_HANDLER_RETURN_CODE->ERROR_HANDLER_RETURN_CODE

2013-05-29 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: error handler code change: IGNORE->KEEP_ACTIVITY_RUNNING
   
2013-05-27 Sasa Bojanic <sasaboy@together.at>
   # New way of signing with timestamping implemented (different servers possible for timestamping)
   
2013-05-17 Sasa Bojanic <sasaboy@together.at>
   # shark mode: renaming of "SharkString" -> "XPDLString"

2013-05-15 Sasa Bojanic <sasaboy@together.at>
   # shark mode: now supporting deadline handling via ext attributes
   # shark mode: code refactored regarding SMTP handling (event audit, error, limit, deadline)
   # new component to deliver to shark (for XPDL validation)
   
2013-03-18 Sasa Bojanic <sasaboy@together.at>
   # Now icons in the taskbar are grouped

2013-03-07 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Initial support for SMTPLimitHandler

2013-03-06 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Now supporting new way of defining SMTPEventAuditManager extended attributes 
   (different names for activity/process EAS + possiblity to define default SMTP attributes on process and package level 
    for the activity and on the package level for the process)
   # Shark mode: Initial support for SMTPErrorHandler
   
2013-02-26 Sasa Bojanic <sasaboy@together.at>
   # Check for completion->Autocomplete when read
